--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "exactquery/xq-detect",
-  "description": "Device feature detection via JS with a PHP backup for server side detection.",
+  "description": "Device feature detection via Vanilla JS with a PHP backup for server side detection.",
   "keywords": [
     "device",
     "feature",
@@ -9,10 +9,12 @@
     "php",
     "browser",
     "device",
-    "touch"
+    "touch",
+    "hidpi",
+    "retina"
   ],
   "homepage": "https://github.com/exactquery/xq-detect",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "suggest": {
     "exactquery/poly-pointer": "Psuedo-Polyfill for (pointer:coarse). Easy support of touch devices."
   },
