--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "retina"
   ],
   "homepage": "https://github.com/jonesiscoding/device",
-  "version": "3.0.3",
+  "version": "3.1",
   "replace": {
     "exactquery/xq-detect": "^3.0"
   },
@@ -30,7 +30,7 @@
   ],
   "autoload": {
       "psr-4": {
-          "XQ\\": "src"
+          "DevIsCoding\\": "src"
       }
   }
 }
