--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   ],
   "autoload": {
       "psr-4": {
-          "DevIsCoding\\": "src"
+          "DevCoding\\Device\\": "src/Device"
       }
   }
 }
