--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "retina"
   ],
   "homepage": "https://github.com/jonesiscoding/device",
-  "version": "4.0.9",
+  "version": "5.0",
   "suggest": {
     "deviscoding/poly-pointer": "Psuedo-Polyfill for (pointer:coarse). Easy support of touch devices."
   },
@@ -25,13 +25,59 @@
       "homepage": "http://www.deviscoding.com"
     }
   ],
+  "prefer-stable": true,
+  "minimum-stability": "dev",
   "autoload": {
       "psr-4": {
           "DevCoding\\Device\\": "src/Device",
-          "DevCoding\\ValueObject\\": "src/ValueObject"
+          "DevCoding\\Hints\\": "src/Hints",
+          "DevCoding\\Helper\\": "src/Helper"
       }
   },
+  "repositories": [
+    {
+      "type": "package",
+      "package": {
+        "name": "fyrd/caniuse",
+        "version": "dev-master",
+        "source": {
+          "url": "https://github.com/Fyrd/caniuse",
+          "type": "git",
+          "reference": "main"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "deviscoding/client-objects",
+        "version": "dev-master",
+        "source": {
+          "url": "https://github.com/jonesiscoding/client-objects",
+          "type": "git",
+          "reference": "main"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "deviscoding/caniparse",
+        "version": "dev-master",
+        "source": {
+          "url": "https://github.com/jonesiscoding/caniparse",
+          "type": "git",
+          "reference": "main"
+        }
+      }
+    }
+  ],
   "require": {
-    "ext-json": "*"
+    "ext-json": "*",
+    "fyrd/caniuse": "dev-master",
+    "deviscoding/caniparse": "dev-master",
+    "deviscoding/code-objects": "^1.3",
+    "deviscoding/client-objects": "dev-master",
+    "symfony/dependency-injection": "^3.4||^4.4||^5.4||^6.0"
   }
 }
